@@ -7,6 +7,8 @@ version 2.4.1:
   - Bug #9601: Containers are no more killed when a resource is set to Absent
   - Fixed some packaging bugs
   - API bug fixes in job submission parsing
+  - Added standby info into `oarnodes -s` and available_upto info into 
+    /resources uri of the API
 
 version 2.4.0:
 --------------
